--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 node_modules/
 dist/
 .env
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+bun.lockb
+bun.lock
+bun.lock.json
+bun.lock.yaml
+bun.lock.json
