✅ Canal Ultra-Seguro A2A implementado com sucesso
Implementação completa do protocolo Agent-to-Agent (A2A) v1.0:

🛡️ Camadas de Segurança:
- mTLS: Autenticação mútua de transporte
- JWT (EdDSA): Autenticação de aplicação
- E2EE: Criptografia end-to-end (preparado)
- A2A Protocol: Comunicação padronizada

🔌 Bindings de Protocolo:
- JSON-RPC 2.0: Chamadas de procedimento remoto
- HTTP/REST: Endpoints RESTful
- mTLS Direct: Conexão direta ultra-segura

📋 Operações A2A Core:
- sendMessage: Envio de mensagens
- sendStreamingMessage: Streaming em tempo real
- getTask/listTasks: Gerenciamento de tasks
- cancelTask: Cancelamento de tasks
- subscribeToTask: Subscrição a updates
- getAgentCard: Descoberta de capacidades

✅ Demonstração funcional com múltiplas camadas de proteção
✅ Tipos semânticos para garantir type safety
✅ Compatibilidade com especificação A2A oficial

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "bun build src/index.ts --outdir dist --target node"
+    "build": "bun build src/index.ts --outdir dist --target node",
+    "example:a2a": "bun build examples/a2a-ultra-secure.ts --outdir dist/examples --target node && bun run dist/examples/a2a-ultra-secure.js",
+    "example:mtls": "bun build examples/mtls-agents.ts --outdir dist/examples --target node && bun run dist/examples/mtls-agents.js",
+    "example:secure": "bun build examples/secure-agents.ts --outdir dist/examples --target node && bun run dist/examples/secure-agents.js"
   },
   "keywords": [],
   "author": "suissAI",
