--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,72 @@
+# Dependencies
 node_modules/
-dist/
-.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 package-lock.json
 yarn.lock
-pnpm-lock.yaml
+
+site/*
+site_qwen/*
+
+# Build outputs
+dist/
+build/
+*.js.map
+*.d.ts.map
+tsbuildinfo
+
+# Logs
+logs/
+*.log
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Runtime data
+coverage/
+.nyc_output/
+*.lcov
+.husky/
+
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Testing
+.reports/
+junit.xml
+coverage.xml
+
+# Temporary files
+tmp/
+temp/
+.cache/
+
+# OS
+Thumbs.db
+.Spotlight-V100
+.Trashes
+
+# Project specific
+reports/
+*.pem
+*.key
+*.crt
+*.csr
+
+# Bun
+.bun/
 bun.lockb
-bun.lock
-bun.lock.json
-bun.lock.yaml
-bun.lock.json
