--- a/semantic-types.manifest.json
+++ b/semantic-types.manifest.json
@@ -117,7 +117,7 @@
   },
   "metadata": {
     "created_at": "2024-12-22T02:30:00Z",
-    "project": "@purecore/one-jwt-4-all",
+    "project": "@purecore-codes/one-jwt-4-all",
     "context": "MCP servers HTTP communication",
     "author": "Kiro AI",
     "version": "1.0.0"
